feat: Phase 2.5 — Admin 관리자 기능, Flyway 마이그레이션 도입, 공지 벨 아이콘 추가 (#47)
* chore: 로컬 Docker 테스트 환경 구성 추가

- docker-compose.local.yml: SSL 없이 HTTP로 전체 스택 실행
- nginx-local.conf: localhost HTTP only 설정
- SPRING_PROFILES_ACTIVE=default (Swagger 활성화)
- KAKAO_REDIRECT_URI=http://localhost/oauth/callback/kakao

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* chore: AWS S3 의존성 및 설정 추가

- AWS SDK v2 bom 2.29.52 의존성 추가
- S3Client 빈 설정 (StaticCredentialsProvider, 환경변수 기반 인증)
- S3Service: 이미지 업로드·삭제 메서드 구현 (jpg/png, 5MB 제한)
- application.yml: multipart 설정 및 AWS 설정 추가
- 테스트용 더미 AWS 환경변수 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: 프로필 이미지 업로드·초기화 기능 추가

- User 엔티티에 customProfileImage 컬럼 추가
- UserResponse: customProfileImage 우선 반환, hasCustomProfileImage 필드 추가
- UserService: updateProfileImage(S3 업로드), resetProfileImage(S3 삭제), deleteUser S3 정리 추가
- UserController: POST /me/profile-image, DELETE /me/profile-image 엔드포인트 추가
- ErrorCode: IMAGE_UPLOAD_FAILED(502) 추가
- GlobalExceptionHandler: MaxUploadSizeExceededException 핸들러 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: 프로필 이미지 업로드·초기화 UI 추가

- user.js 분리: getMe, updateMe, deleteMe, updateProfileImage, resetProfileImage
- MyPage: 아바타 버튼 클릭으로 이미지 업로드, 초기화 버튼 추가
- 파일 형식(jpg/png), 크기(5MB) 클라이언트 사이드 검증
- 업로드 후 Zustand store 및 프로필 상태 즉시 반영

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* chore: docker-compose에 AWS S3 환경변수 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* docs: phase 2 시작전 README 업데이트

* feat: Phase 2 Analytics API 및 Dashboard 넛지 구현

- GET /api/analytics: 신뢰 지표, 단계별 퍼널, 구간별 소요 기간 반환
  - 직군 필터, 코딩테스트 유무 필터 지원
  - 히스토리 미입력 지원건 분석 제외 (신뢰 지표로 표시)
- DashboardResponse에 unstatedCount 필드 추가
  - 히스토리 미입력 IN_PROGRESS 지원건 수 집계 (넛지용)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat: MY 탭 취준 여정 API 구현 (GET /api/users/me/journey)

- 취준 기간(startDate·endDate·journeyDays), 상태(IN_PROGRESS/PASSED) 반환
- 단계별 퍼널 포함 (AnalyticsService.buildFun